fix settings popup layout on small viewports

--- a/src/assets/scss/blocks/_popup.scss
+++ b/src/assets/scss/blocks/_popup.scss
@@ -9,11 +9,11 @@
 	left: 0;
 	right: 0;
 	margin: auto;
-	height: 100%;
+	min-height: 100%;
 
 	@media (min-width: vars.$breakpoint-desktop) {
 		--top: 2rem;
-		height: unset;
+		min-height: unset;
 	}
 
 	&[hidden] {
